--- a/app/views/patients/new.html.erb
+++ b/app/views/patients/new.html.erb
@@ -1,6 +1,6 @@
 <h1>Register</h1>
 
-<% form for @patient do |f|%
+<%= form_for @patient do |f|%>
     <%= f.label :username %>
     <%= f.text_field :username%>
 
