--- a/app/views/providers/index.html.erb
+++ b/app/views/providers/index.html.erb
@@ -1,5 +1,5 @@
 <ul>
 <% @providers.each do |provider|%>
-<li><%= <%= link_to provider.location, provider_path(provider) %>%></li>
+<li> <%= link_to provider.location, provider_path(provider) %> </li>
 <% end %>
 </ul>
