--- a/app/views/prescriptions/new.html.erb
+++ b/app/views/prescriptions/new.html.erb
@@ -2,6 +2,9 @@
 
 <%= form_for @prescription do |f|%>
 
+    <%= f.label :patient_id%>
+    <%= f.text_field :patient_id%>
+
     <%= f.label :medication_id%>
     <%= f.text_field :medication_id%>
 
@@ -10,9 +13,6 @@
 
     <%= f.label :prescribed_date%>
     <%= f.text_field :prescribed_date%>
-
-    <%= f.label :provider_id, "Select Prescribing Provider" %>
-    <%= f.collection_select :provider_id, Provider.all, :id, :name, prompt: true%>
 
     <%= f.submit%>
 <% end %>
