--- a/app/views/providers/show.html.erb
+++ b/app/views/providers/show.html.erb
@@ -4,4 +4,5 @@
 <%= @provider.phone %>
 <%= @provider.location %>
 
+<%= link_to 'Add a New Provider', new_provider_path %>
 <%= link_to 'Edit Provider Details', edit_provider_path(@provider) %>
