--- a/app/views/prescriptions/edit.html.erb
+++ b/app/views/prescriptions/edit.html.erb
@@ -1,5 +1,5 @@
 <h1>Edit Your New Prescription</h1>
 
-<%= render partial: 'prescription_form' %>
+<%= render partial: 'prescription_form', locals: {prescription: @prescription} %>
 
    
