--- a/app/views/prescriptions/show.html.erb
+++ b/app/views/prescriptions/show.html.erb
@@ -8,4 +8,6 @@
 
 <%= link_to 'Edit Prescription', edit_prescription_path(@prescription) %>
 
-<%= link_to 'Delete Prescription', prescription_path(@prescription) %>
+<%= button_to 'Delete Prescription', @prescription, method: :delete, data: { confirm: "Do you wish to delete this prescription?" } %>
+
+<%= link_to 'List of Prescriptions', prescriptions_path %>
