--- a/app/views/providers/show.html.erb
+++ b/app/views/providers/show.html.erb
@@ -6,3 +6,4 @@
 
 <%= link_to 'Add a New Provider', new_provider_path %>
 <%= link_to 'Edit Provider Details', edit_provider_path(@provider) %>
+<%= link_to 'List of Providers', providers_path %>
