--- a/app/views/providers/index.html.erb
+++ b/app/views/providers/index.html.erb
@@ -2,4 +2,6 @@
 <% @providers.each do |provider|%>
 <li> <%= link_to provider.id, provider_path(provider) %> </li>
 <% end %>
+
+<%= link_to 'List of Prescriptions', prescriptions_path %>
 </ul>
