Moved Links, added logout link.

--- a/app/views/providers/index.html.erb
+++ b/app/views/providers/index.html.erb
@@ -3,5 +3,6 @@
 <li> <%= link_to provider.id, provider_path(provider) %> </li>
 <% end %>
 
+<%= link_to 'Add a New Provider', new_provider_path %>
 <%= link_to 'List of Prescriptions', prescriptions_path %>
 </ul>
