Scope URL added.

--- a/app/views/prescriptions/index.html.erb
+++ b/app/views/prescriptions/index.html.erb
@@ -8,4 +8,5 @@
     <% if !@provider %>
     <%= link_to 'Add a New Prescription', new_prescription_path %><br><br>
     <%= link_to 'Show Providers', providers_path %><br><br>
+    <%= link_to 'Called-In Prescriptions', prescriptions_called_in_path %>
     <% end %>
