Changed display of providers, created before actions.

--- a/app/views/prescriptions/show.html.erb
+++ b/app/views/prescriptions/show.html.erb
@@ -2,7 +2,7 @@
 
 <%= @prescription.medication_id %>
 
-<%= @prescription.provider_id %>
+<%= @prescription.provider.name %>
 
 <%= @prescription.prescribed_date %>
 
