--- a/app/views/providers/index.html.erb
+++ b/app/views/providers/index.html.erb
@@ -1,6 +1,6 @@
 <ul>
 <% @providers.each do |provider|%>
-<li> <%= link_to provider.id, provider_path(provider) %> </li>
+<li> <%= link_to provider.name, provider_path(provider) %> </li>
 <% end %>
 
 <%= link_to 'Add a New Provider', new_provider_path %>
